...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.group.GroupCreationActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_step_group_creation_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/circle_button_shape"
        app:backgroundTint="@color/quantum_pink"
...
        app:iconPadding="0dp"
        app:iconSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next_step_group_creation_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_group_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/circle_button_shape"
        app:backgroundTint="@color/quantum_pink"
...
