...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/event_card_image"
            app:layout_constraintTop_toBottomOf="@+id/user_card_view_name" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/check_friend_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="15dp"
            android:background="#00000000"
            android:padding="0dp"
            app:icon="@drawable/ic_round_check_box_outline_blank_24"
...
